feat: merge main branch changes and add automatic backup functionality
- Merge latest setup-lasagna.sh from main branch with 3-tier memory system
- Add automatic backup functionality with timestamped backups
- Update SETUP-README.md with current script configuration and backup docs
- Update main README.md to reflect new capabilities and backup system
- Remove README-PT.md file
- Add comprehensive documentation for backup system and command-line options

Changes include:
- Automatic backup of config files before overwriting
- Updated memory tiers: SMALL (4-8GB), MEDIUM (8-16GB), LARGE (16GB+)
- Enhanced command-line options (-m, -t, -f, -v, -h)
- Detailed backup restoration instructions
- Updated troubleshooting and usage examples